fix: about-meセクションの段落にletter-spacingを追加

--- a/scss/layout/_about_me.scss
+++ b/scss/layout/_about_me.scss
@@ -7,5 +7,6 @@
     p {
         font-size: f.typography(font-size-text-ssm);
         line-height: f.typography(line-height-base);
+        letter-spacing: f.typography(about-me-letter-spacing);
     }
 }
